<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fairytale.fortunetarot.widget.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal|bottom"
        android:textSize="24sp"
        android:textColor="@color/text_title_white"
        android:text="@string/title_card_meaning"
        app:customFont="font_italics.ttf"
        app:isBold="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <com.fairytale.fortunetarot.widget.CustomImageView
                    android:id="@+id/top_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:autoMeasure="true"
                    android:src="@mipmap/paiyi_top_icon"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@id/top_icon"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_light_gray"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_light_gray"
                        android:layout_marginTop="4dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_light_gray"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/top_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_centerVertical="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_light_gray"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_light_gray"
                        android:layout_marginTop="4dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_light_gray"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

            </RelativeLayout>


            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="font_fangsong.ttf"
                android:gravity="center"
                android:textColor="@color/line_color_gray"
                android:text="@string/card_meaning_des1"
                android:textSize="13sp"
                android:layout_marginTop="32dp"/>

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="font_fangsong.ttf"
                android:gravity="center"
                android:textColor="@color/line_color_gray"
                android:text="@string/card_meaning_des2"
                android:layout_marginTop="8dp"
                android:textSize="13sp" />

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="font_fangsong.ttf"
                android:gravity="center"
                android:textColor="@color/line_color_gray"
                android:text="@string/card_meaning_des3"
                android:layout_marginTop="8dp"
                android:textSize="13sp" />

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="font_fangsong.ttf"
                android:gravity="center"
                android:textColor="@color/line_color_gray"
                android:text="@string/card_meaning_des4"
                android:layout_marginTop="8dp"
                android:textSize="13sp" />

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="font_fangsong.ttf"
                android:gravity="center"
                android:textColor="@color/line_color_gray"
                android:text="@string/card_meaning_des5"
                android:layout_marginTop="8dp"
                android:textSize="13sp" />

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="font_italics.ttf"
                android:gravity="center"
                android:textColor="@color/line_color_gray"
                android:text="@string/click_to_detail"
                app:isBold="true"
                android:layout_marginTop="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:id="@+id/big_arcana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:customFont="font_fangsong.ttf"
                    android:layout_centerInParent="true"
                    android:textColor="@color/text_title_white"
                    android:text="@string/big_arcana"
                    app:isBold="true" />

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_toLeftOf="@id/big_arcana"
                    android:layout_marginRight="16dp"
                    android:layout_centerVertical="true"/>

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_toRightOf="@id/big_arcana"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:id="@+id/tv_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:customFont="font_fangsong.ttf"
                    android:layout_centerInParent="true"
                    android:textColor="@color/text_title_white"
                    android:text="@string/feedback"
                    app:isBold="true" />

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_toLeftOf="@id/tv_feedback"
                    android:layout_marginRight="16dp"
                    android:layout_centerVertical="true"/>

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_toRightOf="@id/tv_feedback"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:id="@+id/tv_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray_dark"
                android:text="@string/ads"
                app:customFont="font_fangsong.ttf"
                android:layout_marginTop="32dp"
                app:isBold="true"/>

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray_dark"
                android:text="@string/communication"
                app:customFont="font_fangsong.ttf"
                android:layout_marginTop="8dp"
                app:isBold="true"
                android:layout_marginBottom="96dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>