<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fairytale.fortunetarot.widget.AlphaButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/buy_close"
        android:layout_gravity="center_horizontal"
        app:clickAlpha="130"
        android:layout_centerHorizontal="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/buy_bg"
        android:layout_marginTop="16dp"
        android:layout_below="@id/btn_close"/>

    <com.fairytale.fortunetarot.widget.CustomFontTextView
        android:id="@+id/customFontTextView_unlock"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_red_bg_selector"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/buy"
        android:textColor="@color/text_title_white"
        android:textSize="16sp"
        app:customFont="font_mini.ttf"
        app:isBold="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="12dp" />

    <com.fairytale.fortunetarot.widget.CustomFontTextView
        android:id="@+id/customFontTextView_unlock_revert"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_red_bg_selector"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/buy_revert"
        android:textColor="@color/text_title_white"
        android:textSize="16sp"
        app:customFont="font_mini.ttf"
        app:isBold="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="12dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/btn_close"
        android:layout_above="@id/customFontTextView_unlock"
        android:background="@mipmap/buy_inner_bg"/>

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_alignParentTop="true">

        <com.fairytale.fortunetarot.widget.CustomFontTextView
            android:id="@+id/customFontTextView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip"
            android:layout_centerHorizontal="true"

            android:textColor="@color/navigation_text_red"
            app:customFont="font_mini.ttf"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/customFontTextView_title"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_drak_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="4dp"
                android:background="@color/line_drak_gray"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="4dp"
                android:background="@color/line_drak_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/customFontTextView_title"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_drak_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="4dp"
                android:background="@color/line_drak_gray"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="4dp"
                android:background="@color/line_drak_gray"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_top"
        android:layout_marginTop="20dp"
        android:layout_alignBottom="@id/view"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/buy_adremove_icon"
                    android:text="@string/no_ads"
                    android:gravity="center"
                    app:customFont="font_mini.ttf"
                    android:textColor="@color/text_title_white"/>

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/buy_paizhen_icon"
                    android:text="@string/free_divination"
                    android:gravity="center"
                    app:customFont="font_mini.ttf"
                    android:textColor="@color/text_title_white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/buy_paiyi_icon"
                    android:text="@string/free_card_meaning"
                    android:gravity="center"
                    app:customFont="font_mini.ttf"
                    android:textColor="@color/text_title_white"/>

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/buy_detail_icon"
                    android:text="@string/divination_detail"
                    android:gravity="center"
                    app:customFont="font_mini.ttf"
                    android:textColor="@color/text_title_white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/buy_taluo_icon"
                    android:text="@string/free_card_meaning"
                    android:gravity="center"
                    app:customFont="font_mini.ttf"
                    android:textColor="@color/text_title_white"/>

                <com.fairytale.fortunetarot.widget.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/buy_vip_icon"
                    android:text="@string/divination_detail"
                    android:gravity="center"
                    app:customFont="font_mini.ttf"
                    android:textColor="@color/text_title_white"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</RelativeLayout>