<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.fairytale.fortunetarot.widget.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:customFont="font_italics.ttf"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/light_dark"
            android:text="@string/scroll_enable"
            android:textSize="13sp"/>

        <com.fairytale.fortunetarot.widget.CustomImageView
            android:id="@+id/customImageView_cardArray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isMeasuredByWithOrHeight="width"
            app:autoMeasure="false"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:id="@+id/customFontTextView_currentPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:customFont="font_italics.ttf"
                android:textColor="@color/line_color_gray"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depart"
                android:textSize="12sp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/light_dark"/>

            <com.fairytale.fortunetarot.widget.CustomFontTextView
                android:id="@+id/customFontTextView_totalPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:customFont="font_italics.ttf"
                android:textSize="12sp"
                android:textColor="@color/light_dark"/>

        </LinearLayout>

        <com.fairytale.fortunetarot.widget.CustomFontTextView
            android:id="@+id/customFontTextView_cardArrayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textColor="@color/gray_dark"
            app:customFont="font_italics.ttf"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_light_gray"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"/>


        <com.fairytale.fortunetarot.widget.CustomFontTextView
            android:id="@+id/customFontTextView_cardArrayContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title_white"
            app:customFont="font_italics.ttf"
            android:padding="16dp"/>

        <com.fairytale.fortunetarot.widget.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            app:customFont="font_italics.ttf"
            android:paddingLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/tips"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_light_gray"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"/>

        <com.fairytale.fortunetarot.widget.CustomFontTextView
            android:id="@+id/customFontTextView_tipsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title_white"
            app:customFont="font_italics.ttf"
            android:padding="16dp"/>
    </LinearLayout>


</ScrollView>